Updated "plclip" stuff. Removed redundant "usage.txt".
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4940 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -66,8 +66,8 @@ mapmodel 1 3 0 0 "barrel"			// 34
 mapmodel 1 2 0 0 "barrel2"			// 35
 mapmodel 0 0 0 0 "elektro"			// 36  
 mapmodel 3 1 0 0 "europalette"			// 37
-mapmodel 0 0 0 0 "gastank"			// 38	Clip this with nothing mapmodels. Use two of them with the size
-						//	mapmodel 3 5 0 0 "nothing"
+mapmodel 0 0 0 0 "gastank"			// 38	Ensure you clip this mapmodel fully using the command
+						//      "newent clip 0 3 7 5" in the middle of the model.
 mapmodel 2 1 0 0 "gutter_h"			// 39
 mapmodel 1 2 0 0 "gutter_v"			// 40
 mapmodel 0 0 0 0 "wrench"			// 41
