--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -1568,7 +1568,7 @@ docremark [The way this works is slightly strange at first, but allows for very 
 
 docident [edittoggle] [switches between map edit mode and normal.];
 
-docremark [In map edit mode you can select bits of the map by clicking or dragging your crosshair on the floor or ceiling (using the "attack" identifier, normally MOUSE1), then use the identifiers below to modify the selection. While in edit mode, physics and collision don't apply (noclip), and key repeat is ON. Note that if you fly outside the map, cube still renders the world as if you were standing on the floor directly below the camera.];
+docremark [In map edit mode you can select bits of the map by clicking or dragging your crosshair on the floor or ceiling (using the "attack" identifier, normally MOUSE1), then use the identifiers below to modify the selection. While in edit mode, normal physics and collision don't apply (clips), and key repeat is ON. Note that if you fly outside the map, cube still renders the world as if you were standing on the floor directly below the camera.];
 
 docremark [Hotkey E];
 
@@ -1586,7 +1586,7 @@ docremark [For example 'entproperty 0 2' when executed near a lightsource would 
 
 docident [entset] [Edits the closest entity.];
 
-docargument [type] [the entity type] [light, sound, clip, playerstart, clips, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag, helmet] [0];
+docargument [type] [the entity type] [light, sound, clip, plclip, playerstart, pistol, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag, helmet] [0];
 
 docargument [value1] [see newent 'type'] [] [0];
 
@@ -1712,7 +1712,7 @@ docargument [dZ] [z-offset] [] [0];
 
 docident [newent] [Adds a new entity];
 
-docargument [type] [the entity type] [light, sound, clip, playerstart, pistol, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag, helmet] [0];
+docargument [type] [the entity type] [light, sound, clip, plclip, playerstart, pistol, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag, helmet] [0];
 
 docargument [value1] [see newent 'type'] [] [0];
 
