--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -57,20 +57,15 @@ menuitem "" -1
 menuitem "Ladder entity"	"saycommand /newent ladder " [ echo "Ensure that you have placed the ladder mapmodel first (found in the mapmodels menu)..." ]
 menuitem "Clip entity"		"showmenu Clips" "echo Clips can be used to block off areas that players shouldn't be able to access..."
 
-
-alias clip01 0
-alias clip02 0
-alias clip03 0
-alias clip04 0
-
 newmenu "Clips"
-
-menuitemslider "Elevation from ground: " 0 50 "$clip01" 1 "" "alias clip01 $arg1"
-menuitemslider "Length of clip	(X): " 0 50 "$clip02" 1 "" "alias clip02 $arg1"
-menuitemslider "Width of clip	(Y): " 0 50 "$clip03" 1 "" "alias clip03 $arg1"
-menuitemslider "Height of clip	(Z): " 0 50 "$clip04" 1 "" "alias clip04 $arg1"
+alias _clip00 0; alias _clip01 0; alias _clip02 1; alias _clip03 1; alias _clip04 1 // Give aliases an initial value.
+menuitemslider "Clip type: " 0 1 "$_clip00" 1 [ Clip "Player Clip" ] "alias _clip00 (at [clip plclip] $arg1)"
+menuitemslider "Elevation from ground: " 0 50 "$_clip01" 1 "" "alias _clip01 $arg1"
+menuitemslider "Length of clip	(X): " 0 50 "$_clip02" 1 "" "alias _clip02 $arg1"
+menuitemslider "Width of clip	(Y): " 0 50 "$_clip03" 1 "" "alias _clip03 $arg1"
+menuitemslider "Height of clip	(Z): " 0 50 "$_clip04" 1 "" "alias _clip04 $arg1"
 menuitem "" -1
-menuitem "2		     [ OK ]" "newent clip $clip01 $clip02 $clip03 $clip04"
+menuitem "2		     [ OK ]" "newent $_clip00 $_clip01 $_clip02 $_clip03 $_clip04"
 
 //Pickups menu
 newmenu Pickups
@@ -129,10 +124,10 @@ menuitem "Change watercolour"			[ showmenu "Water colour" ]
 menuitem "Print entity stats"			"entstats"
 menuitem "Select the next closest entity"	"nextclosestent"
 menuitemcheckbox "Show mapmodel clippings: " "$showmodelclipping" "showmodelclipping $arg1"
-menuitemslider "Select only these entities: " 0 14 "$_closestenttypestatus" 1 "All Light Playerstart Pistol Ammobox Grenades Health Armour Akimbo Mapmodel Ladder CTF-flag Sound Clip Helmet" "_closestentslider $arg1"
+menuitemslider "Select only these entities: " 0 15 "$_closestenttypestatus" 1 "All Light Playerstart Pistol Ammobox Grenades Health Armour Akimbo Mapmodel Ladder CTF-flag Sound Clip Helmet PlayerClip" "_closestentslider $arg1"
 
 // "closestenttype" slider...
-alias _closestentslider [ closestenttype (at ["" light playerstart pistol ammobox grenades health armour akimbo mapmodel ladder ctf-flag sound clip helmet] $arg1); alias _closestenttypestatus $arg1 ]
+alias _closestentslider [ closestenttype (at ["" light playerstart pistol ammobox grenades health armour akimbo mapmodel ladder ctf-flag sound clip helmet plclip] $arg1); alias _closestenttypestatus $arg1 ]
 
 // Map-message edit/creation menu
 alias menumapmsg [ if (= (strcmp (getmapmsg) "Untitled Map by Unknown") 1) [ showmenu "Create a map message" ] [ showmenu "Edit a map message" ] ]
