--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -8,7 +8,7 @@ alias editent [
     if (strcmp $enttype "mapmodel")  [
         saycommand "/entset" $enttype (getentattr 1) (getentattr 2) (getentattr 3)
         ][
-        if (> (findlist "light sound clip" $enttype) -1) [
+        if (> (findlist "light sound clip plclip" $enttype) -1) [
             saycommand "/entset" $enttype (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3)
             ][
             saycommand "/entset" $enttype (getentattr ((> (findlist "playerstart ctf-flag" $enttype) -1)))
