Whoops, bad config code. Fixed my boo boo! :)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4941 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -58,8 +58,8 @@ menuitem "Ladder entity"	"saycommand /newent ladder " [ echo "Ensure that you ha
 menuitem "Clip entity"		"showmenu Clips" "echo Clips can be used to block off areas that players shouldn't be able to access..."
 
 newmenu "Clips"
-alias _clip00 0; alias _clip01 0; alias _clip02 1; alias _clip03 1; alias _clip04 1 // Give aliases an initial value.
-menuitemslider "Clip type: " 0 1 "$_clip00" 1 [ Clip "Player Clip" ] "alias _clip00 (at [clip plclip] $arg1)"
+alias _clip00 clip; alias _clip00status 0; alias _clip01 0; alias _clip02 1; alias _clip03 1; alias _clip04 1 // Give aliases an initial value.
+menuitemslider "Clip type: " 0 1 "$_clip00status" 1 [ Clip "Player Clip" ] "alias _clip00 (at [clip plclip] $arg1); alias _clip00status $arg1"
 menuitemslider "Elevation from ground: " 0 50 "$_clip01" 1 "" "alias _clip01 $arg1"
 menuitemslider "Length of clip	(X): " 0 50 "$_clip02" 1 "" "alias _clip02 $arg1"
 menuitemslider "Width of clip	(Y): " 0 50 "$_clip03" 1 "" "alias _clip03 $arg1"
