--- a/ac/source/enet/Makefile.in
+++ b/ac/source/enet/Makefile.in
@@ -39,9 +39,8 @@ host_triplet = @host@
 subdir = .
 DIST_COMMON = README $(am__configure_deps) $(enetinclude_HEADERS) \
 	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
-	$(srcdir)/libenet.pc.in $(top_srcdir)/configure ChangeLog \
-	config.guess config.sub depcomp install-sh ltmain.sh missing \
-	mkinstalldirs
+	$(srcdir)/libenet.pc.in $(top_srcdir)/configure config.guess \
+	config.sub depcomp install-sh ltmain.sh missing mkinstalldirs
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
@@ -79,8 +78,8 @@ am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(pkgconfigdir)" \
 	"$(DESTDIR)$(enetincludedir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libenet_la_LIBADD =
-am_libenet_la_OBJECTS = host.lo list.lo callbacks.lo packet.lo peer.lo \
-	protocol.lo unix.lo win32.lo
+am_libenet_la_OBJECTS = callbacks.lo compress.lo host.lo list.lo \
+	packet.lo peer.lo protocol.lo unix.lo win32.lo
 libenet_la_OBJECTS = $(am_libenet_la_OBJECTS)
 libenet_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
@@ -242,7 +241,7 @@ enetinclude_HEADERS = \
 	include/enet/win32.h
 
 lib_LTLIBRARIES = libenet.la
-libenet_la_SOURCES = host.c list.c callbacks.c packet.c peer.c protocol.c unix.c win32.c
+libenet_la_SOURCES = callbacks.c compress.c host.c list.c packet.c peer.c protocol.c unix.c win32.c
 # see info '(libtool) Updating version info' before making a release
 libenet_la_LDFLAGS = $(AM_LDFLAGS) -version-info 0:0:0
 INCLUDES = -Iinclude
@@ -328,6 +327,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/callbacks.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/compress.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/host.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/list.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/packet.Plo@am__quote@
