--- a/ac/packages/maps/official/ac_iceroad.cfg
+++ b/ac/packages/maps/official/ac_iceroad.cfg
@@ -154,6 +154,7 @@ mapmodel 1 1 0 0 "toca/shelf"
 mapmodel 4 1 15 0 "toca/guardtower"
 mapmodel 1 2 0 0 "toca/treetrunk1"
 mapmodel 0 0 0 0 "icicle"
+mapmodel 0 0 0 0 "fencepost"
 loadsky "textures/skymaps/steini/steini2"
 loadnotexture
 texturereset
