bug fix: quick nade throw
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4989 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -86,10 +86,18 @@ alias ktf   [ votemap 15 $arg1 ]
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
 alias melee [ weapon 0 ]
-alias grenades [ weapon 6 ]
+alias grenades [ weapon 7 ]
 
 alias altaction [
     (concatword altaction_ (curweapon))
+]
+
+alias quicknadethrow_old [
+    if (> (magcontent 7) 0) [
+        if (!= (curweapon) 7) [grenades]
+        attack
+    ]
+    onrelease [ sleep 1 [ if (= (curweapon) 7) [weapon (prevweapon)] ] ]
 ]
 
 loop i 9 [ alias (concatword altaction_ $i) quicknadethrow ] // Quick nade throw is default
