Bugfix + warning for next time.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5001 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -4,6 +4,10 @@
 // Files listed in here can be either *.wav or *.ogg
 // Filename extensions do not need to be listed.
 
+// Whenever adding new sounds, or changing the positions of previously existing
+// sounds in this config file, please update the "Mute/Un-mute specific sounds"
+// menu inside the "menus_settings.cfg" file.
+
 registersound "player/jump" 80            // 0 - S_JUMP
 registersound "player/step" 90    0 24    // 1 - S_SOFTLAND
 registersound "player/land" 95    0 24    // 2 - S_HARDLAND
