--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -436,61 +436,63 @@ menuitem "Un-mute all sounds..."	"unmuteallsounds"
 
 newmenu  "Mute weapon sounds"
 
-menuitemcheckbox "Knife: "             "(soundmuted 7)" "mutesound 7 (! $arg1)"
-menuitemcheckbox "Pistol: "            "(soundmuted 8)" "mutesound 8 (! $arg1)"
-menuitemcheckbox "Pistol reloading: "  "(soundmuted 9)" "mutesound 9 (! $arg1)"
-menuitemcheckbox "Shotgun: "           "(soundmuted 10)" "mutesound 10 (! $arg1)"
-menuitemcheckbox "Shotgun reloading: " "(soundmuted 11)" "mutesound 11 (! $arg1)"
-menuitemcheckbox "Submachine gun: "    "(soundmuted 12)" "mutesound 12 (! $arg1)"
-menuitemcheckbox "Submachine gun reloading: " "(soundmuted 13)" "mutesound 13 (! $arg1)"
-menuitemcheckbox "Sniper: "            "(soundmuted 14)" "mutesound 14 (! $arg1)"
-menuitemcheckbox "Sniper reloading: "  "(soundmuted 15)" "mutesound 15 (! $arg1)"
-menuitemcheckbox "Assault Rifle: "     "(soundmuted 16)" "mutesound 16 (! $arg1)"
-menuitemcheckbox "Assault Rifle reloading: "  "(soundmuted 17)" "mutesound 17 (! $arg1)"
-menuitemcheckbox "Grenade pull: "      "(soundmuted 39)" "mutesound 39 (! $arg1)"
-menuitemcheckbox "Grenade throw: "     "(soundmuted 40)" "mutesound 40 (! $arg1)"
-menuitemcheckbox "Grenade bounce 1: "  "(soundmuted 41)" "mutesound 41 (! $arg1)"
-menuitemcheckbox "Grenade bounce 2: "  "(soundmuted 42)" "mutesound 42 (! $arg1)"
-menuitemcheckbox "Akimbo reload: "     "(soundmuted 43)" "mutesound 43 (! $arg1)"
-menuitemcheckbox "Change weapon: "     "(soundmuted 44)" "mutesound 44 (! $arg1)"
-menuitemcheckbox "Empty clip: "        "(soundmuted 22)" "mutesound 22 (! $arg1)"
+menuitemcheckbox "Knife: "			"(soundmuted 7)"  "mutesound  7 (! $arg1)"
+menuitemcheckbox "Pistol: "			"(soundmuted 8)"  "mutesound  8 (! $arg1)"
+menuitemcheckbox "Pistol reloading: "		"(soundmuted 9)"  "mutesound  9 (! $arg1)"
+menuitemcheckbox "Carbine: "			"(soundmuted 10)" "mutesound 10 (! $arg1)"
+menuitemcheckbox "Carbine reloading: "		"(soundmuted 11)" "mutesound 11 (! $arg1)"
+menuitemcheckbox "Shotgun: "			"(soundmuted 12)" "mutesound 12 (! $arg1)"
+menuitemcheckbox "Shotgun reloading: "		"(soundmuted 13)" "mutesound 13 (! $arg1)"
+menuitemcheckbox "Submachine gun: "		"(soundmuted 14)" "mutesound 14 (! $arg1)"
+menuitemcheckbox "Submachine gun reloading: "	"(soundmuted 15)" "mutesound 15 (! $arg1)"
+menuitemcheckbox "Sniper: "			"(soundmuted 16)" "mutesound 16 (! $arg1)"
+menuitemcheckbox "Sniper reloading: "		"(soundmuted 17)" "mutesound 17 (! $arg1)"
+menuitemcheckbox "Assault Rifle: "		"(soundmuted 18)" "mutesound 18 (! $arg1)"
+menuitemcheckbox "Assault Rifle reloading: "	"(soundmuted 19)" "mutesound 19 (! $arg1)"
+menuitemcheckbox "Grenade pull: "		"(soundmuted 41)" "mutesound 41 (! $arg1)"
+menuitemcheckbox "Grenade throw: "		"(soundmuted 42)" "mutesound 42 (! $arg1)"
+menuitemcheckbox "Grenade bounce 1: "		"(soundmuted 43)" "mutesound 43 (! $arg1)"
+menuitemcheckbox "Grenade bounce 2: "		"(soundmuted 44)" "mutesound 44 (! $arg1)"
+menuitemcheckbox "Akimbo reload: "		"(soundmuted 45)" "mutesound 45 (! $arg1)"
+menuitemcheckbox "Change weapon: "		"(soundmuted 46)" "mutesound 46 (! $arg1)"
+menuitemcheckbox "Empty clip: "			"(soundmuted 24)" "mutesound 24 (! $arg1)"
 
 newmenu "Mute pickup sounds"
 
-menuitemcheckbox "Ammo pickup: "     "(soundmuted 18)" "mutesound 18 (! $arg1)"
-menuitemcheckbox "Health pickup: "   "(soundmuted 19)" "mutesound 19 (! $arg1)"
-menuitemcheckbox "Armour pickup: "   "(soundmuted 20)" "mutesound 20 (! $arg1)"
-menuitemcheckbox "Akimbo pickup: "   "(soundmuted 21)" "mutesound 21 (! $arg1)"
-menuitemcheckbox "Akimbo finished: " "(soundmuted 23)" "mutesound 23 (! $arg1)"
+menuitemcheckbox "Ammo pickup: "     "(soundmuted 20)" "mutesound 20 (! $arg1)"
+menuitemcheckbox "Health pickup: "   "(soundmuted 21)" "mutesound 21 (! $arg1)"
+menuitemcheckbox "Armour pickup: "   "(soundmuted 22)" "mutesound 22 (! $arg1)"
+menuitemcheckbox "Akimbo pickup: "   "(soundmuted 23)" "mutesound 23 (! $arg1)"
+menuitemcheckbox "Akimbo finished: " "(soundmuted 25)" "mutesound 25 (! $arg1)"
 
 newmenu "Mute pain/death sounds"
 
-menuitemcheckbox "Pain 1: "     "(soundmuted 24)" "mutesound 24 (! $arg1)"
-menuitemcheckbox "Pain 2: "     "(soundmuted 25)" "mutesound 25 (! $arg1)"
-menuitemcheckbox "Pain 3: "     "(soundmuted 26)" "mutesound 26 (! $arg1)"
-menuitemcheckbox "Pain 4: "     "(soundmuted 27)" "mutesound 27 (! $arg1)"
-menuitemcheckbox "Pain 5: "     "(soundmuted 28)" "mutesound 28 (! $arg1)"
-menuitemcheckbox "Pain 6: "     "(soundmuted 29)" "mutesound 29 (! $arg1)"
-menuitemcheckbox "Die 1: "      "(soundmuted 30)" "mutesound 30 (! $arg1)"
-menuitemcheckbox "Die 2: "      "(soundmuted 31)" "mutesound 31 (! $arg1)"
+menuitemcheckbox "Pain 1: "     "(soundmuted 26)" "mutesound 26 (! $arg1)"
+menuitemcheckbox "Pain 2: "     "(soundmuted 27)" "mutesound 27 (! $arg1)"
+menuitemcheckbox "Pain 3: "     "(soundmuted 28)" "mutesound 28 (! $arg1)"
+menuitemcheckbox "Pain 4: "     "(soundmuted 29)" "mutesound 29 (! $arg1)"
+menuitemcheckbox "Pain 5: "     "(soundmuted 30)" "mutesound 30 (! $arg1)"
+menuitemcheckbox "Pain 6: "     "(soundmuted 31)" "mutesound 31 (! $arg1)"
+menuitemcheckbox "Die 1: "      "(soundmuted 32)" "mutesound 32 (! $arg1)"
+menuitemcheckbox "Die 2: "      "(soundmuted 33)" "mutesound 33 (! $arg1)"
 menuitemcheckbox "HitSound: "   "(! $hitsound)"   "hitsound (! $hitsound)"
-menuitemcheckbox "Gib sounds: " "(soundmuted 46)" "mutesound 46 (! $arg1)"
-menuitemcheckbox "Tinnitus: "   "(soundmuted 60)" "mutesound 60 (! $arg1)"
+menuitemcheckbox "Gib sounds: " "(soundmuted 48)" "mutesound 48 (! $arg1)"
+menuitemcheckbox "Tinnitus: "   "(soundmuted 62)" "mutesound 62 (! $arg1)"
 
 newmenu "Mute movement sounds"
 
-menuitemcheckbox "Footsteps: "       "(soundmuted 51)" "mutesound 51 (! $arg1)"
-menuitemcheckbox "Crouch: "          "(soundmuted 52)" "mutesound 52 (! $arg1)"
-menuitemcheckbox "Water footsteps: " "(soundmuted 53)" "mutesound 53 (! $arg1)"
-menuitemcheckbox "Water crouching: " "(soundmuted 54)" "mutesound 54 (! $arg1)"
-menuitemcheckbox "Crouch-in: "       "(soundmuted 55)" "mutesound 55 (! $arg1)"
-menuitemcheckbox "Crouch-out: "      "(soundmuted 56)" "mutesound 56 (! $arg1)"
+menuitemcheckbox "Footsteps: "       "$footsteps"      "footsteps $arg1"
+menuitemcheckbox "Crouch: "          "(soundmuted 54)" "mutesound 54 (! $arg1)"
+menuitemcheckbox "Water footsteps: " "(soundmuted 55)" "mutesound 55 (! $arg1)"
+menuitemcheckbox "Water crouching: " "(soundmuted 56)" "mutesound 56 (! $arg1)"
+menuitemcheckbox "Crouch-in: "       "(soundmuted 57)" "mutesound 57 (! $arg1)"
+menuitemcheckbox "Crouch-out: "      "(soundmuted 58)" "mutesound 58 (! $arg1)"
 menuitemcheckbox "Jump: "            "(soundmuted  0)" "mutesound  0 (! $arg1)"
 menuitemcheckbox "Soft landing: "    "(soundmuted  1)" "mutesound  1 (! $arg1)"
 menuitemcheckbox "Hard landing: "    "(soundmuted  2)" "mutesound  2 (! $arg1)"
-menuitemcheckbox "Splash 1: "        "(soundmuted 33)" "mutesound 33 (! $arg1)"
-menuitemcheckbox "Splash 2: "        "(soundmuted 34)" "mutesound 34 (! $arg1)"
-menuitemcheckbox "Underwater: "      "(soundmuted 59)" "mutesound 59 (! $arg1)"
+menuitemcheckbox "Splash 1: "        "(soundmuted 35)" "mutesound 35 (! $arg1)"
+menuitemcheckbox "Splash 2: "        "(soundmuted 36)" "mutesound 36 (! $arg1)"
+menuitemcheckbox "Underwater: "      "(soundmuted 61)" "mutesound 61 (! $arg1)"
 
 newmenu "Mute bullet/explosion sounds"
 
@@ -498,47 +500,47 @@ menuitemcheckbox "Ricochet air 1: "        "(soundmuted  3)" "mutesound  3 (! $a
 menuitemcheckbox "Ricochet air 2: "        "(soundmuted  4)" "mutesound  4 (! $arg1)"
 menuitemcheckbox "Ricochet hit: "          "(soundmuted  5)" "mutesound  5 (! $arg1)"
 menuitemcheckbox "Bullet (water impact): " "(soundmuted  6)" "mutesound  6 (! $arg1)"
-menuitemcheckbox "Grenade explosion: "     "(soundmuted 32)" "mutesound 32 (! $arg1)"
+menuitemcheckbox "Grenade explosion: "     "(soundmuted 34)" "mutesound 34 (! $arg1)"
 
 newmenu "Mute other sounds"
 
-menuitemcheckbox "Flag drop: "   "(soundmuted 35)" "mutesound 35 (! $arg1)"
-menuitemcheckbox "Flag pickup: " "(soundmuted 36)" "mutesound 36 (! $arg1)"
-menuitemcheckbox "Flag return: " "(soundmuted 37)" "mutesound 37 (! $arg1)"
-menuitemcheckbox "Flag score: "  "(soundmuted 38)" "mutesound 38 (! $arg1)"
-menuitemcheckbox "Headshot: "    "(soundmuted 47)" "mutesound 47 (! $arg1)"
-menuitemcheckbox "Call vote: "   "(soundmuted 48)" "mutesound 48 (! $arg1)"
-menuitemcheckbox "Pass vote: "   "(soundmuted 49)" "mutesound 49 (! $arg1)"
-menuitemcheckbox "Fail vote: "   "(soundmuted 50)" "mutesound 50 (! $arg1)"
-menuitemcheckbox "Menu select: " "(soundmuted 57)" "mutesound 57 (! $arg1)"
-menuitemcheckbox "Menu enter: "  "(soundmuted 58)" "mutesound 58 (! $arg1)"
+menuitemcheckbox "Flag drop: "   "(soundmuted 37)" "mutesound 37 (! $arg1)"
+menuitemcheckbox "Flag pickup: " "(soundmuted 38)" "mutesound 38 (! $arg1)"
+menuitemcheckbox "Flag return: " "(soundmuted 39)" "mutesound 39 (! $arg1)"
+menuitemcheckbox "Flag score: "  "(soundmuted 40)" "mutesound 40 (! $arg1)"
+menuitemcheckbox "Headshot: "    "(soundmuted 49)" "mutesound 49 (! $arg1)"
+menuitemcheckbox "Call vote: "   "(soundmuted 50)" "mutesound 50 (! $arg1)"
+menuitemcheckbox "Pass vote: "   "(soundmuted 51)" "mutesound 51 (! $arg1)"
+menuitemcheckbox "Fail vote: "   "(soundmuted 52)" "mutesound 52 (! $arg1)"
+menuitemcheckbox "Menu select: " "(soundmuted 59)" "mutesound 59 (! $arg1)"
+menuitemcheckbox "Menu enter: "  "(soundmuted 60)" "mutesound 60 (! $arg1)"
 
 newmenu "Mute voice-coms"
 
-menuitemcheckbox "Affirmative: "             "(soundmuted 61)" "mutesound 61 (! $arg1)"
-menuitemcheckbox "All-right sir: "           "(soundmuted 62)" "mutesound 62 (! $arg1)"
-menuitemcheckbox "Come on, move: "           "(soundmuted 63)" "mutesound 63 (! $arg1)"
-menuitemcheckbox "Coming in with the flag: " "(soundmuted 64)" "mutesound 64 (! $arg1)"
-menuitemcheckbox "Cover me: "                "(soundmuted 65)" "mutesound 65 (! $arg1)"
-menuitemcheckbox "Defend the flag: "         "(soundmuted 66)" "mutesound 66 (! $arg1)"
-menuitemcheckbox "Enemy down: "              "(soundmuted 67)" "mutesound 67 (! $arg1)"
-menuitemcheckbox "Go get 'em boys!: "        "(soundmuted 68)" "mutesound 68 (! $arg1)"
-menuitemcheckbox "Good job team: "           "(soundmuted 69)" "mutesound 69 (! $arg1)"
-menuitemcheckbox "I got one!: "              "(soundmuted 70)" "mutesound 70 (! $arg1)"
-menuitemcheckbox "I made contact: "          "(soundmuted 71)" "mutesound 71 (! $arg1)"
-menuitemcheckbox "I'm attacking: "           "(soundmuted 72)" "mutesound 72 (! $arg1)"
-menuitemcheckbox "I'm on defense: "          "(soundmuted 73)" "mutesound 73 (! $arg1)"
-menuitemcheckbox "I'm on your team: "        "(soundmuted 74)" "mutesound 74 (! $arg1)"
-menuitemcheckbox "Negative: "                "(soundmuted 75)" "mutesound 75 (! $arg1)"
-menuitemcheckbox "No can do: "               "(soundmuted 76)" "mutesound 76 (! $arg1)"
-menuitemcheckbox "Recover the flag: "        "(soundmuted 77)" "mutesound 77 (! $arg1)"
-menuitemcheckbox "Sorry: "                   "(soundmuted 78)" "mutesound 78 (! $arg1)"
-menuitemcheckbox "Spread out: "              "(soundmuted 79)" "mutesound 79 (! $arg1)"
-menuitemcheckbox "Stay here: "               "(soundmuted 80)" "mutesound 80 (! $arg1)"
-menuitemcheckbox "Stay together: "           "(soundmuted 81)" "mutesound 81 (! $arg1)"
-menuitemcheckbox "There's no way sir: "      "(soundmuted 82)" "mutesound 82 (! $arg1)"
-menuitemcheckbox "We did it!: "              "(soundmuted 83)" "mutesound 83 (! $arg1)"
-menuitemcheckbox "Yes: "                     "(soundmuted 84)" "mutesound 84 (! $arg1)"
-menuitemcheckbox "Nice shot: "               "(soundmuted 85)" "mutesound 85 (! $arg1)"
+menuitemcheckbox "Affirmative: "             "(soundmuted 63)" "mutesound 63 (! $arg1)"
+menuitemcheckbox "All-right sir: "           "(soundmuted 64)" "mutesound 64 (! $arg1)"
+menuitemcheckbox "Come on, move: "           "(soundmuted 65)" "mutesound 65 (! $arg1)"
+menuitemcheckbox "Coming in with the flag: " "(soundmuted 66)" "mutesound 66 (! $arg1)"
+menuitemcheckbox "Cover me: "                "(soundmuted 67)" "mutesound 67 (! $arg1)"
+menuitemcheckbox "Defend the flag: "         "(soundmuted 68)" "mutesound 68 (! $arg1)"
+menuitemcheckbox "Enemy down: "              "(soundmuted 69)" "mutesound 69 (! $arg1)"
+menuitemcheckbox "Go get 'em boys!: "        "(soundmuted 70)" "mutesound 70 (! $arg1)"
+menuitemcheckbox "Good job team: "           "(soundmuted 71)" "mutesound 71 (! $arg1)"
+menuitemcheckbox "I got one!: "              "(soundmuted 72)" "mutesound 72 (! $arg1)"
+menuitemcheckbox "I made contact: "          "(soundmuted 73)" "mutesound 73 (! $arg1)"
+menuitemcheckbox "I'm attacking: "           "(soundmuted 74)" "mutesound 74 (! $arg1)"
+menuitemcheckbox "I'm on defense: "          "(soundmuted 75)" "mutesound 75 (! $arg1)"
+menuitemcheckbox "I'm on your team: "        "(soundmuted 76)" "mutesound 76 (! $arg1)"
+menuitemcheckbox "Negative: "                "(soundmuted 77)" "mutesound 77 (! $arg1)"
+menuitemcheckbox "No can do: "               "(soundmuted 78)" "mutesound 78 (! $arg1)"
+menuitemcheckbox "Recover the flag: "        "(soundmuted 79)" "mutesound 79 (! $arg1)"
+menuitemcheckbox "Sorry: "                   "(soundmuted 80)" "mutesound 80 (! $arg1)"
+menuitemcheckbox "Spread out: "              "(soundmuted 81)" "mutesound 81 (! $arg1)"
+menuitemcheckbox "Stay here: "               "(soundmuted 82)" "mutesound 82 (! $arg1)"
+menuitemcheckbox "Stay together: "           "(soundmuted 83)" "mutesound 83 (! $arg1)"
+menuitemcheckbox "There's no way sir: "      "(soundmuted 84)" "mutesound 84 (! $arg1)"
+menuitemcheckbox "We did it!: "              "(soundmuted 85)" "mutesound 85 (! $arg1)"
+menuitemcheckbox "Yes: "                     "(soundmuted 86)" "mutesound 86 (! $arg1)"
+menuitemcheckbox "Nice shot: "               "(soundmuted 87)" "mutesound 87 (! $arg1)"
 
 
