Handy "convertclips" script which automatically converts the nearest "clip" entity into a "plclip" entity. Super uber duper handy!
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5003 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -1,8 +1,12 @@
 // CubeScript placed in this file is automatically executed on each startup.
 
-// editent command
+// "editent" command:
+// This command collects all the attributes of the nearest entity, and then
+// prompts that into a handy command that allows you to edit that entities 
+// attributes easily.
 // Note: The editent command can NOT define rotation/yaw inside the command!
-//       ... however, the current yaw of the player will define the rotation/yaw when using the command!
+// However, the current yaw of the player will define the rotation/yaw when 
+// using the command!
 alias editent [
     alias enttype (getenttype)
     if (strcmp $enttype "mapmodel")  [
@@ -16,6 +20,17 @@ alias editent [
         ]
     ]
 
+// "convertclips" command:
+// This command automatically converts the nearest "clip" entity
+// into a "plclip" entity. Really handy tool with the new version of AC.
+// Bind it to a key and have fun!
+alias convertclips [ 
+	closestenttype "clip"
+	alias enttype (getenttype)
+	if (strcmp $enttype "clip")  [  entset plclip (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3) ]
+	closestenttype ""
+	]
+]
 
 alias fullscreenscript [ if (= $fullscreen 1)[ fullscreen 0 ] [ fullscreen 1 ] ]
 
