Opps (removed an extra "]")
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5008 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -29,9 +29,11 @@ alias convertclips [
 	alias enttype (getenttype)
 	if (strcmp $enttype "clip")  [  entset plclip (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3) ]
 	closestenttype ""
-	]
 ]
 
+
+// "fullscreenscript" command:
+// This command allows swapping of fullscreen mode to be bound to a key.
 alias fullscreenscript [ if (= $fullscreen 1)[ fullscreen 0 ] [ fullscreen 1 ] ]
 
 alias editmapmsg [ saycommand ( concatword [/mapmsg ] ["] (getmapmsg) ["] ) ]
