--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -21,7 +21,7 @@ menuitem "Change to spectate mode"      "gospectate" [__ingamemenu_showmodel "In
 menuitem "Change player skin..."        [showmenu (at [CLA RVSF] (curteam))]  [__ingamemenu_showmodel "In-game" 1]
 menuitem "" -1  [__ingamemenu_showmodel "In-game" 0]
 menuitem "Set mode/map..."		"showmenu Gamemode"
-menuitem "Kick/ban player..."		"showmenu kick/ban"
+//menuitem "Kick/ban player..."		"showmenu kick/ban"        // only noobish vote abusers use this, if you really want it, just uncomment
 menuitem "Adjust teams..."		[ showmenu "Team adjustment" ]
 menuitem "Download a demo..."		[ listdemos; showmenu "Download demo" ]
 menuitem "Get additional server information" "showmenu [serverinfo]"
