--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -46,6 +46,7 @@ menuitemtextinput "Nickname:			" "" "name $arg1"
 menuitemtextinput "Resolution (Width):		" "$scr_w" "scr_w $arg1"
 menuitemtextinput "Resolution (Height):		" "$scr_h" "scr_h $arg1"
 menuitemtextinput "Mouse sensitivity		" "$sensitivity" "sensitivity $arg1"
+menuitemtextinput "Smooth Mouse	(0 to 3)	" "$mfilter" "mfilter $arg1"
 menuitemslider "Graphics detail: " 1 6 "$gfxqualityalias" 1 [ Horrible Low Medium Good "High (Performs slow)" "INSANE! (Performs really slow)"] "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "$soundqualityalias" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
@@ -249,6 +250,7 @@ menuitemkeyinput "Fullscreen: "	    fullscreenscript
 menuitem "" -1 // Invert mouse is a slider instead of a checkbox so the 2 sensitivity textboxes don't look weird.
 menuitemslider "Invert mouse: " 0 1 "$invmouse" 1 "Disabled Enabled" "invmouse $arg1" 
 menuitemtextinput "Mouse sensitivity:					" "$sensitivity" "sensitivity $arg1"
+menuitemtextinput "Smooth Mouse	(0 to 3)	                        " "$mfilter" "mfilter $arg1"
 menuitemtextinput "Sniper-scope sensitivity scale:				" "$scopesensscale" "alias scopesensscale $arg1"
 menuitem "" -1
 menuitem "Reset keybinds to default settings..." [ showmenu "Reset Binds" ]
