Menu entry about local footsteps now also understandable by normal people :P
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5038 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -419,7 +419,7 @@ menuitemslider "Sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce
 menuitemcheckbox "Footsteps: " "$footsteps" "footsteps $arg1"
 menuitemcheckbox "Bullet hit: " "$bulletbouncesound" "bulletbouncesound $arg1"
 menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
-menuitemcheckbox "Disable local footsteps: " "(= $localfootsteps)" "localfootsteps (! $arg1)"
+menuitemcheckbox "Disable own footsteps: " "(= $localfootsteps)" "localfootsteps (! $arg1)"
 menuitem "" -1
 menuitem "Mute/Un-mute specific sounds..."	[ showmenu "Mute specific sounds" ]
 
