config changes - I18L, run alias, ..
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5062 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -140,6 +140,12 @@ keymap 316 PRINT
 keymap 317 SYSREQ
 keymap 318 BREAK
 keymap 319 MENU
+// added for de support ::
+keymap 223 SZ
+keymap 252 UE
+keymap 246 OE
+keymap 228 AE
+// :: added for de support
 
 exec config/resetbinds.cfg
 
