--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -35,6 +35,8 @@ newmenu maps
 alias defaultmaps "ac_aqueous ac_arabian ac_arctic ac_arid ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_iceroad ac_keller ac_mines ac_outpost ac_power ac_rattrap ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban ac_werk"
 genmapitems	$defaultmaps
 menuitem	"" -1
+// the following seems to be of the old-style thoughts of MP - flowtron: 2010may23 says: the different MPs should somehow list themselves thouh, yes.
+// possibly a not defined internal script-file or we just generate from the know listing, which is well defined, the CGZ files and show them by code.
 if (&& $mappack_version (listlen $mappack_maps)) [menuitem (concatword "Map-pack (version " $mappack_version ") maps...") [showmenu "mappack maps"]];
 menuitem	"Show all maps..." [ showmenu "all maps" ]
 
