saycommand changes ">" to talk
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5063 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -49,7 +49,7 @@ bind AT ""
 bind LEFTBRACKET "editheight 0 -1"
 bind BACKSLASH ""
 bind RIGHTBRACKET "editheight 0 1"
-bind CARET ""
+bind CARET "saycommand /"
 bind UNDERSCORE ""
 bind BACKQUOTE "saycommand /"
 bind A "left"
@@ -71,7 +71,7 @@ bind P "editheight 2 1"
 bind Q [ if $editing [ domodifier 1 ] ]
 bind R "reload"
 bind S "backward"
-bind T "saycommand"
+bind T "saycommand >"
 bind U "undo"
 bind V [ if $editing [ paste ] [ showmenu voicecom ] ]
 bind W "forward"
