Fixing lss nade spawn, some HUDEXTRAS stuff, and temporarily reverting the cursor related functions to 1.0.4 ones
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5076 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -46,7 +46,6 @@ menuitemtextinput "Nickname:			" "" "name $arg1"
 menuitemtextinput "Resolution (Width):		" "$scr_w" "scr_w $arg1"
 menuitemtextinput "Resolution (Height):		" "$scr_h" "scr_h $arg1"
 menuitemtextinput "Mouse sensitivity		" "$sensitivity" "sensitivity $arg1"
-menuitemtextinput "Smooth Mouse	(0 to 3)	" "$mfilter" "mfilter $arg1"
 menuitemslider "Graphics detail: " 1 6 "$gfxqualityalias" 1 [ Horrible Low Medium Good "High (Performs slow)" "INSANE! (Performs really slow)"] "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "$soundqualityalias" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
@@ -393,6 +392,7 @@ menuitemcheckbox "   Damage direction indicator " "(= $hidedamageindicator 0)" "
 menuitemcheckbox "   Damage screen flash	" "$damagescreen" "damagescreen $arg1"
 menuitemcheckbox "   Crosshair team-sign " "$crosshairteamsign" "crosshairteamsign $arg1"
 menuitemcheckbox "   CTF icons"	"(= $hidectfhud 0)" "hidectfhud  (= $arg1 0)"
+menuitemslider   "   " 0 2 [ $hudextras ] 1 [ "No extra messages" "Show extra messages in console" "Pop up extra messages!" ] [ hudextras $arg1 ]
 menuitem "" -1
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
 menuitem "Change crosshair...				"	  "showmenu Crosshairs"
