Flow, this doesn't belong in "defaults" :P
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5082 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -38,6 +38,8 @@ alias fullscreenscript [ if (= $fullscreen 1)[ fullscreen 0 ] [ fullscreen 1 ] ]
 
 alias editmapmsg [ saycommand ( concatword [/mapmsg ] ["] (getmapmsg) ["] ) ]
 
+alias run [ exec (concatword config/ $arg1 .cfg) ]
+
 // Auto-completions
 alias mapcomplete [complete $arg1 "packages/maps/official packages/maps" cgz]
 mapcommands = "map tdm coop dm lms ts ctf pf lss osok tosok htf vip tktf ktf sendmap"
