avoid error message on lowest sensitivity going to scoped
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5125 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -129,8 +129,14 @@ alias zoom [
     if (= $arg1 1) [
         if (=f $sensitivity (scopesens)) [] [
             alias oldsens $sensitivity
-            sensitivity (scopesens)
-            setscope  1
+			// avoid error if using 0.001 as sensitivity
+			newsens = (scopesens)
+			if (> (*f 1 1000) $newsens) [
+				if (< 1000 $newsens) [
+	            sensitivity (scopesens)
+				] []
+			] []
+    	    setscope  1
         ]
     ] [
         sensitivity $oldsens
