vote reason implemented for kick/ban
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5151 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/admin.cfg
+++ b/ac/config/admin.cfg
@@ -1,5 +1,5 @@
-alias kick [ callvote 0 $arg1 ]
-alias ban [ callvote 1 $arg1 ]
+alias kick [ callvote 0 $arg1 $arg2 ]
+alias ban [ callvote 1 $arg1  $arg2 ]
 alias removebans [ callvote 2 $arg1 ]
 alias mastermode [ callvote 3 $arg1 ]
 alias autoteam [ callvote 4 $arg1 ]
