--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -3276,6 +3276,8 @@ docident [ban] [Temporary ban of the specified player from the server.];
 
 docargument [CN] [The player to ban] [Client number] [0];
 
+docargument [R] [The reason for this vote] [] [0];
+
 docremark [Temporary ban duration is fixed at 20 minutes.];
 
 
@@ -3321,6 +3323,8 @@ docargument [N] [0: show, 1: hide] [min 0/max 1/default 0];
 docident [kick] [Kicks the specified player from the server.];
 
 docargument [CN] [The player to kick] [Client number] [0];
+
+docargument [R] [The reason for this vote] [] [0];
 
 
 
