--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -120,7 +120,7 @@ alias quicknadethrow_old [
 ]
 
 loop i 9 [ alias (concatword altaction_ $i) quicknadethrow ] // Quick nade throw is default
-alias altaction_5 [ zoom 1; onrelease [ zoom 0 ] ] // Sniper
+alias altaction_5 [ setscope 1; onrelease [ setscope 0 ] ] // Sniper
 //alias altaction_7 [ attack ] // Grenade // with this comment, you throw the nade and the nade is unselected : Brahma
 
 alias oldsens $sensitivity
