undo 1st-char-4-talk sillyness : "/run resetbinds" to reassign T
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5202 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -71,7 +71,7 @@ bind P "editheight 2 1"
 bind Q [ if $editing [ domodifier 1 ] ]
 bind R "reload"
 bind S "backward"
-bind T "saycommand >"
+bind T "saycommand" // or even "saycommand >"
 bind U "undo"
 bind V [ if $editing [ paste ] [ showmenu voicecom ] ]
 bind W "forward"
