"don't be evil" soundmenu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5218 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -411,18 +411,13 @@ menuitemslider "Sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
 menuitemslider "Music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
 menuitemslider "Sound detail: " 1 3 "($soundqualityalias)" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
-menuitem "Advanced settings..." [ showmenu "Advanced settings" ]
-
-newmenu "Advanced settings"
-
-menuitemslider "Sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
-menuitemcheckbox "Footsteps: " "$footsteps" "footsteps $arg1"
-menuitemcheckbox "Bullet hit: " "$bulletbouncesound" "bulletbouncesound $arg1"
-menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
-menuitemcheckbox "Disable own footsteps: " "(= $localfootsteps)" "localfootsteps (! $arg1)"
+menuitem "Advanced settings:" -1
+menuitemslider "   Sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
+menuitemcheckbox "   Footsteps: " "$footsteps" "footsteps $arg1"
+menuitemcheckbox "   Disable own footsteps: " "(= $localfootsteps)" "localfootsteps (! $arg1)"
+menuitemslider "   Voice-coms: " 0 2 "$mutevoicecomm" 1 [On "Team only" Off] "mutevoicecomm $arg1"
 menuitem "" -1
 menuitem "Mute/Un-mute specific sounds..."    [ showmenu "Mute specific sounds" ]
-
 
 newmenu "Mute specific sounds"
 
@@ -503,6 +498,8 @@ menuitemcheckbox "Ricochet air 2: "        "(soundmuted  4)" "mutesound  4 (! $a
 menuitemcheckbox "Ricochet hit: "          "(soundmuted  5)" "mutesound  5 (! $arg1)"
 menuitemcheckbox "Bullet (water impact): " "(soundmuted  6)" "mutesound  6 (! $arg1)"
 menuitemcheckbox "Grenade explosion: "     "(soundmuted 34)" "mutesound 34 (! $arg1)"
+menuitemcheckbox "Bullet hit: " "$bulletbouncesound" "bulletbouncesound $arg1"
+menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
 
 newmenu "Mute other sounds"
 
