update to brahma's code
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5222 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -415,7 +415,7 @@ menuitem "Advanced settings:" -1
 menuitemslider "   Sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
 menuitemcheckbox "   Footsteps: " "$footsteps" "footsteps $arg1"
 menuitemcheckbox "   Disable own footsteps: " "(= $localfootsteps)" "localfootsteps (! $arg1)"
-menuitemslider "   Voice-coms: " 0 2 "$mutevoicecomm" 1 [On "Team only" Off] "mutevoicecomm $arg1"
+menuitemslider "   Voice-coms: " 0 2 "$voicecomsounds" 1 [Off On "Team only"] "voicecomsounds $arg1"
 menuitem "" -1
 menuitem "Mute/Un-mute specific sounds..."    [ showmenu "Mute specific sounds" ]
 
