another missing file included
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5240 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/codeblocks/AssaultCube.cbp
+++ b/ac/source/codeblocks/AssaultCube.cbp
@@ -243,6 +243,7 @@
 		<Unit filename="../src/serverbrowser.cpp">
 			<Option target="default" />
 		</Unit>
+		<Unit filename="../src/serverchecks.h" />
 		<Unit filename="../src/servercontroller.h">
 			<Option target="default" />
 		</Unit>
