addOnLoad should be used to append to "mapstartonce" alias - do NOT set it directly!
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5241 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -33,7 +33,7 @@ alias preparebotmatch [
     echo starting botmatch..
     
     // register event that is fired during mapload
-    alias mapstartonce [ 
+    addOnLoad [ 
         kickallbots
         startbotmatch // add bots
         mode 0 // reset mode for next maps
@@ -45,11 +45,11 @@ alias preparebotmatch [
 
 alias afterdisconnect [
     if $connected [
-        alias mapstartonce $arg1
+        addOnLoad $arg1
         disconnect
     ] [
         if (watchingdemo) [
-            alias mapstartonce $arg1
+            addOnLoad $arg1
             stopdemo
         ] $arg1
     ]
