--- a/ac/config/admin.cfg
+++ b/ac/config/admin.cfg
@@ -16,7 +16,7 @@ alias shuffleteams [ callvote 12 ]
 alias demo [
     alias _demofile $arg1
     if $connected [
-        alias mapstartonce [mode -1; map $_demofile]
+        addOnLoad [mode -1; map $_demofile]
         disconnect
     ][
         mode -1; map $_demofile
