--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -259,7 +259,6 @@ menuinit [ alias resetbindsyes 0 ] // Ensures this menu works correctly.
 menuitemcheckbox "Yes, reset all binds: " "alias resetbindsyes 1" "alias resetbindsyes $arg1" 
 menuitem "2          [ Apply! ]        " [ if $resetbindsyes [ resetbinds ] [ showmenu "" ] ] 
 
-
 newmenu video
 
 menuitemtextinput "Screen width:                " "$scr_w" "scr_w $arg1" "" 11
@@ -356,6 +355,7 @@ menuitemcheckbox "Reduced violence mode: " "$poniesmodeon" "reducedviolencemode 
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
 menuitemcheckbox "Auto-screenshot: " "$autoscreenshot" "autoscreenshot $arg1"
+menuitemslider "Akimbo end action: " 0 2 "$akimboendaction" 1 [ "Switch to pistol" "Switch to primary weapon" "Switch to grenades" ] "akimboendaction $arg1"
 menuitemslider "Console size: " 0 20 "$consize" 1 "" "consize $arg1"
 
 // Reduced game violence mode...
