--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -46,7 +46,7 @@ menuitemtextinput "Nickname:            " "" "name $arg1"
 menuitemtextinput "Resolution (Width):        " "$scr_w" "scr_w $arg1"
 menuitemtextinput "Resolution (Height):        " "$scr_h" "scr_h $arg1"
 menuitemtextinput "Mouse sensitivity        " "$sensitivity" "sensitivity $arg1"
-menuitemslider "Graphics detail: " 1 6 "$gfxqualityalias" 1 [ Horrible Low Medium Good "High (Performs slow)" "INSANE! (Performs really slow)"] "new_gfx_quality $arg1"
+menuitemslider "Graphics detail: " 1 6 "$gfxqualityalias" 1 [ "Horrible (Low Resolution config)" Low Medium Good "High (Performs slow)" "INSANE! (Performs really slow)"] "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "$soundqualityalias" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
 menuitem "2                    [ OK ]" [ closemenu "QUICK setup"; resetgl ]
@@ -154,7 +154,7 @@ alias new_gfx_quality [
                         stencilshadow 0
                         stencilbits 0
                         dynshadow 0
-                        lighterror 10
+                        lighterror 20
                         scorch 0
                         bullethole 0
                         blood 0
@@ -162,7 +162,7 @@ alias new_gfx_quality [
                         shotline 0
                         trilinear 1
                         waterrefract 0
-                        texreduce 0
+                        texreduce 1
                             ] [    // Horrible gfx quality
                             fsaa 0
                             minlod 60
@@ -174,7 +174,7 @@ alias new_gfx_quality [
                             stencilshadow 0
                             stencilbits 0
                             dynshadow 0
-                            lighterror 16
+                            lighterror 100
                             scorch 0
                             bullethole 0
                             blood 0
@@ -182,7 +182,7 @@ alias new_gfx_quality [
                             shotline 0
                             trilinear 0
                             waterrefract 0
-                            texreduce 1
+                            texreduce -1
                         ]
                     ]
                 ]
@@ -263,7 +263,7 @@ newmenu video
 
 menuitemtextinput "Screen width:                " "$scr_w" "scr_w $arg1" "" 11
 menuitemtextinput "Screen height:                " "$scr_h" "scr_h $arg1" "" 11
-menuitemslider "Graphics detail: " 1 6 "$gfxqualityalias" 1 [ Horrible Low Medium Good "High (Performs slow)" "INSANE! (Performs really slow)"] "new_gfx_quality $arg1"
+menuitemslider "Graphics detail: " 1 6 "$gfxqualityalias" 1 [ "Horrible (Low Resolution config)" Low Medium Good "High (Performs slow)" "INSANE! (Performs really slow)"] "new_gfx_quality $arg1"
 menuitem "" -1
 menuitemslider "Field of view: " 75 120 "$fov" 2 "" "fov $arg1"
 menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
