scripts pertaining to mapstart-(once/always)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5275 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/admin.cfg
+++ b/ac/config/admin.cfg
@@ -16,7 +16,7 @@ alias shuffleteams [ callvote 12 ]
 alias demo [
     alias _demofile $arg1
     if $connected [
-        addOnLoad [mode -1; map $_demofile]
+        addOnLoadOnce [mode -1; map $_demofile]
         disconnect
     ][
         mode -1; map $_demofile
