--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -33,7 +33,7 @@ alias preparebotmatch [
     echo starting botmatch..
     
     // register event that is fired during mapload
-    addOnLoad [ 
+    addOnLoadOnce [ 
         kickallbots
         startbotmatch // add bots
         mode 0 // reset mode for next maps
@@ -45,11 +45,11 @@ alias preparebotmatch [
 
 alias afterdisconnect [
     if $connected [
-        addOnLoad $arg1
+        addOnLoadOnce $arg1
         disconnect
     ] [
         if (watchingdemo) [
-            addOnLoad $arg1
+            addOnLoadOnce $arg1
             stopdemo
         ] $arg1
     ]
