--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -190,4 +190,6 @@ alias sbconnect [ echo connecting to $arg7 ; connect $arg1 $arg2 ]
 // For those players who use IRC too much...
 alias join "connect $arg1 $arg2 $arg3"
 
-addOnLoad = [ if $mapstartonce [ mapstartonce = (concat (concatword $mapstartonce ";") $arg1) ] [ mapstartonce = $arg1 ] ]
+addOnLoadOnce = [ if $mapstartonce [ mapstartonce = (concat (concatword $mapstartonce ";") $arg1) ] [ mapstartonce = $arg1 ] ]
+addOnLoadAlways = [ if $mapstartalways [ mapstartalways = (concat (concatword $mapstartalways ";") $arg1) ] [ mapstartalways = $arg1 ] ]
+
