--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -202,60 +202,6 @@ menuitem "2    [ Download the servers map version and join the game ]" "getmap"
 menuitem "3 [ Keep the local map version and disconnect from the server ]" [ showmenu ""; disconnect ]
 menuinitselection 4
 
-newmenu voicecom 1 1
-
-menuitem "1. Team Commands" [showmenu "Team Commands"]
-menuitem "2. Team State" [showmenu "Team State"]
-menuitem "3. Team Talk" [showmenu "Team Talk"]
-menuitem "4. Public Talk" [showmenu "Public Talk"]
-
-
-alias vcrnd [ // pick random shout if possible
-    alias len (listlen $arg1)
-    if (> $len 1) [
-        alias r (rnd $len)
-        voicecom (at $arg1 $r) (at $arg2 $r)
-    ] [
-        voicecom $arg1 $arg2
-    ]
-]
-
-
-alias genvcitem [
-    if (> (listlen $arg2) 1) [ alias text (at $arg1 0) ] [ alias text $arg1 ] // split multiple shouts
-    alias action (concatword vcrnd " [" $arg2 "]" " [" $arg1 "]")
-    menuitem (concatword $arg3 ". " $text) $action // add as numbered list
-]
-
-
-newmenu "Team Commands" 1 1
-
-genvcitem "Come on, move!"              comeonmove          1
-genvcitem "Cover me!"                   coverme             2
-genvcitem "Spread out!"                 spreadout           3
-genvcitem "Stay here!"                  stayhere            4
-genvcitem "Stay together!"              staytogether        5
-genvcitem "Defend the flag!"            defendtheflag       6
-genvcitem "Recover the flag!"           recovertheflag      7
-
-
-newmenu "Team State" 1 1
-
-genvcitem ["Enemy down" "I got one"]    "enemydown igotone" 1
-genvcitem "I made contact"              imadecontact        2
-genvcitem "I'm attacking"               imattacking         3
-genvcitem "I'm on defense"              imondefense         4
-genvcitem "Coming in with the flag!"    cominginwiththeflag    5
-         
-
-newmenu "Team Talk" 1 1
-
-genvcitem [Yes Affirmative "All right, Sir"]                    "yes affirmative allrightsir"       1
-genvcitem ["Negative" "No can do" "There's no way, Sir!"]       "negative nocando theresnowaysir"   2
-genvcitem "Sorry"                                               sorry                               3
-genvcitem "I'm on your team, man!"                              imonyourteamman                     4
-genvcitem ["We did it!" "Go get 'em boys!" "Good job, team!"]   "wedidit gogetemboys goodjobteam"   5
-
-newmenu "Public Talk" 1 1
-
-genvcitem "Nice shot"                   niceshot            1
+// change the following two lines if you prefer the old layout
+//exec config/menu_voicecom_v1.cfg
+exec config/menu_voicecom_v2.cfg
