"Recommended for Microsoft Windows Vista and Windows 7." Added Windows 7
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5288 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/vcpp/buildEnv/InstallTypes.ini
+++ b/ac/source/vcpp/buildEnv/InstallTypes.ini
@@ -30,7 +30,7 @@ Bottom=55
 
 [Field 4]
 Type=Label
-Text=Installs AssaultCube for multiple users by configuring it to store user data inside the "My Documents" folder. Recommended for Microsoft Windows Vista.
+Text=Installs AssaultCube for multiple users by configuring it to store user data inside the "My Documents" folder. Recommended for Microsoft Windows Vista and Windows 7.
 Left=32
 Right=300
 Top=75
