testing: combat pistol (with burst!)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@5307 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -105,23 +105,24 @@ alias ktf   [ votemap 15 $arg1 ]
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
 alias melee [ weapon 0 ]
-alias grenades [ weapon 7 ]
+alias grenades [ weapon 8 ]
 
 alias altaction [
     (concatword altaction_ (curweapon))
 ]
 
 alias quicknadethrow_old [
-    if (> (magcontent 7) 0) [
+    if (> (magcontent 8) 0) [
         if (!= (curweapon) 7) [grenades]
         attack
     ]
     onrelease [ sleep 1 [ if (= (curweapon) 7) [weapon (prevweapon)] ] ]
 ]
 
-loop i 9 [ alias (concatword altaction_ $i) quicknadethrow ] // Quick nade throw is default
+loop i 10 [ alias (concatword altaction_ $i) quicknadethrow ] // Quick nade throw is default
 alias altaction_5 [ setscope 1; onrelease [ setscope 0 ] ] // Sniper
-//alias altaction_7 [ attack ] // Grenade // with this comment, you throw the nade and the nade is unselected : Brahma
+alias altaction_7 [ setburst 1; onrelease [ setburst 0 ] ] // Combat pistol
+//alias altaction_8 [ attack ] // Grenade // with this comment, you throw the nade and the nade is unselected : Brahma
 
 alias oldsens $sensitivity
 
