--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -61,7 +61,7 @@ gamemodedesc 0 [Team Deathmatch: Find the enemy team and destroy them!]
 gamemodedesc 1 [Co-operative edit: Use this mode to edit maps with others online!]
 gamemodedesc 2 [Deathmatch: Destroy anything that moves! Everyone for themselves!]
 gamemodedesc 3 [Survivor: Everyone for themselves! Once you die, you must wait for the round to restart.]
-gamemodedesc 4 [Team Survivor: Find the enemy team, destory them. Once everyone on the enemy team is gone... repeat!]
+gamemodedesc 4 [Team Survivor: Find the enemy team, destroy them. Once everyone on the enemy team is gone... repeat!]
 gamemodedesc 5 [Capture the Flag: Steal the enemy flag and bring it to your home base. Don't let your own flag get stolen.]
 gamemodedesc 6 [Pistol Frenzy: Can you make your enemy eat lead with the most simple of weapons?]
 gamemodedesc 7 [Bot Team Deathmatch: Find the enemy team and destroy them!]
