--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -4,60 +4,6 @@ docsection [CubeScript]
 
 
 
-docident [<] [Determines if a value is smaller than a second value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [<=] [Determines if a values is less than or equal than a second value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [=] [Determines if two values are equal.];
-
-docargument [A] [first value] [] [0];
-
-docargument [B] [second value] [] [0];
-
-docexample [echo there are only (concatword (= 1 1) (= 1 0)) types of people in the world] [Output: there are only 10 types of people in the world];
-
-
-
-docident [>] [Determines if a value is bigger than a second value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [>=] [Determines if a values is greater than or equal than a second value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [||] [logical OR.];
-
-docargument [A] [first value] [] [0];
-
-docargument [B] [second value] [] [0];
-
-docexample [echo (|| 1 0)] [output: 1];
-
-docexample [echo (|| 0 0)] [output: 0];
-
-
-
 docident [-] [Performs a subtraction.];
 
 docargument [A] [the minuend] [] [0];
@@ -80,11 +26,11 @@ docargument [B] [second value] [] [0];
 
 
 
-docident [*] [Performs a multiplication.];
+docident [!=f] [Determines if a floating-point value is not equal to a second floating-point value.];
 
-docargument [A] [the multiplicand] [] [0];
+docargument [A] [the first value] [] [0];
 
-docargument [B] [the multiplier] [] [0];
+docargument [B] [the second value] [] [0];
 
 
 
@@ -100,6 +46,34 @@ docexample [echo (&& 1 0)] [Output: 0];
 
 
 
+docident [*] [Performs a multiplication.];
+
+docargument [A] [the multiplicand] [] [0];
+
+docargument [B] [the multiplier] [] [0];
+
+
+
+docident [*f] [Performs a floating point multiplication.];
+
+docargument [A] [the multiplicand] [] [0];
+
+docargument [B] [the multiplier] [] [0];
+
+
+
+docident [||] [logical OR.];
+
+docargument [A] [first value] [] [0];
+
+docargument [B] [second value] [] [0];
+
+docexample [echo (|| 1 0)] [output: 1];
+
+docexample [echo (|| 0 0)] [output: 0];
+
+
+
 docident [+] [Performs an addition.];
 
 docargument [A] [the first summand] [] [0];
@@ -107,6 +81,96 @@ docargument [A] [the first summand] [] [0];
 docargument [B] [the second summand] [] [0];
 
 docremark [Example: echo the sum of x and y is (+ $x $y)];
+
+
+
+docident [+f] [Adds up two floating-point numbers.];
+
+docargument [A] [the first summand] [float] [0];
+
+docargument [B] [the second summand] [float] [0];
+
+
+
+docident [<] [Determines if a value is smaller than a second value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [<=] [Determines if a values is less than or equal than a second value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [<=f] [Determines if a floating-point value is less than or equal to a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [<f] [Determines if a floating-point value is smaller than a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [=] [Determines if two values are equal.];
+
+docargument [A] [first value] [] [0];
+
+docargument [B] [second value] [] [0];
+
+docexample [echo there are only (concatword (= 1 1) (= 1 0)) types of people in the world] [Output: there are only 10 types of people in the world];
+
+
+
+docident [=f] [Determines if a floating-point value is equal to a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [>] [Determines if a value is bigger than a second value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [>=] [Determines if a values is greater than or equal than a second value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [>=f] [Determines if a floating-point value is greater than or equal to a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
+
+
+
+docident [>f] [Determines if a floating-point value is greater than a second floating-point value.];
+
+docargument [A] [the first value] [] [0];
+
+docargument [B] [the second value] [] [0];
 
 
 
@@ -158,75 +222,11 @@ docargument [B] [] [the divisor] [0];
 
 
 
-docident [<f] [Determines if a floating-point value is smaller than a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [<=f] [Determines if a floating-point value is less than or equal to a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [=f] [Determines if a floating-point value is equal to a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [>f] [Determines if a floating-point value is greater than a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [>=f] [Determines if a floating-point value is greater than or equal to a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
 docident [-f] [Subtracts two floating-point numbers.];
 
 docargument [A] [the minuend] [float] [0];
 
 docargument [B] [the subtrahend] [float] [0];
-
-
-
-docident [!=f] [Determines if a floating-point value is not equal to a second floating-point value.];
-
-docargument [A] [the first value] [] [0];
-
-docargument [B] [the second value] [] [0];
-
-
-
-docident [*f] [Performs a floating point multiplication.];
-
-docargument [A] [the multiplicand] [] [0];
-
-docargument [B] [the multiplier] [] [0];
-
-
-
-docident [+f] [Adds up two floating-point numbers.];
-
-docargument [A] [the first summand] [float] [0];
-
-docargument [B] [the second summand] [float] [0];
 
 
 
@@ -511,6 +511,16 @@ docexample [echo $gamemode] [Output: 5];
 docident [invmouse] [Sets mouse to "flight sim" mode.];
 
 docargument [B] [sets invmouse] [0 (off), else (on)] [0];
+
+
+
+docident [jpegquality] [Sets the JPEG screenshot image quality.];
+
+docargument [N] [Compression level] [min 10/max 100/default 70];
+
+docremark [The image quality is set by it's compression level, a value of 10 sets maximum compression and a small file size but results in a bad quality image];
+
+docremark [while a value of 100 results in a large file but gives the best quality image.];
 
 
 
@@ -2266,7 +2276,7 @@ docargument [V] [] [min 1/max 10000/default 2000];
 
 
 
-docident [altconsize] [];
+docident [altconsize] [Sets the number of text lines on an alternate F11 history display.];
 
 docargument [V] [] [min 0/max 100/default 0];
 
@@ -2276,13 +2286,15 @@ docident [clearminimap] [Recreates the minimap for the current map.];
 
 
 
-docident [confade] [];
+docident [confade] [Sets how many seconds before the console text rolls up.];
 
 docargument [V] [] [min 0/max 60/default 20];
 
+docremark [It may also be viewed as the speed at wich the console text dissapears.];
 
 
-docident [consize] [];
+
+docident [consize] [Sets how many lines of text the console displays.];
 
 docargument [V] [] [min 0/max 100/default 6];
 
@@ -2344,7 +2356,7 @@ docargument [V] [] [min 1/max 10000/default 1000];
 
 
 
-docident [fullconsize] [];
+docident [fullconsize] [Sets the number of text lines on the F11 history display.];
 
 docargument [V] [] [min 0/max 100/default 40];
 
@@ -2430,9 +2442,17 @@ docargument [V] [] [min 0/max 1/default 1];
 
 
 
-docident [maxcon] [];
+docident [maxcon] [Sets the total number of text lines from the console to store as history.];
 
 docargument [V] [] [min 10/max 1000/default 200];
+
+
+
+docident [maxhistory] [Sets how many typed console commands to store.];
+
+docargument [N] [Total of stored commands] [min 0/max 10000/default 1000];
+
+docremark [This value sets how many command lines to store in memory, everytime a command is entered it gets store so it can be recalled using the "/" key along with the arrow keys to scroll back and forth through the list.];
 
 
 
@@ -2856,14 +2876,6 @@ docargument [V] [] [min 0/max 30000/default 10000];
 
 
 
-docident [screenres] [];
-
-docargument [W] [width] [] [0];
-
-docargument [H] [height] [] [0];
-
-
-
 docident [scr_h] [Sets the screen height.];
 
 docargument [] [the screen height] [min 0/max 768/default 10000];
@@ -2873,6 +2885,14 @@ docargument [] [the screen height] [min 0/max 768/default 10000];
 docident [scr_w] [Sets the screen width.];
 
 docargument [] [the screen width] [min 0/max 1024/default 10000];
+
+
+
+docident [screenres] [];
+
+docargument [W] [width] [] [0];
+
+docargument [H] [height] [] [0];
 
 
 
@@ -2976,13 +2996,13 @@ docsection [Sound]
 
 
 
-docident [al_referencedistance] [];
+docident [al_referencedistance] [The distance from the source emitting the sound to the listener.];
 
 docargument [V] [] [min 0/max 1000000/default 400];
 
 
 
-docident [al_rollofffactor] [];
+docident [al_rollofffactor] [This value indicates the relative "strength" of a sound (how far away the sound can be heard.];
 
 docargument [V] [] [min 0/max 1000000/default 100];
 
@@ -3276,8 +3296,6 @@ docident [ban] [Temporary ban of the specified player from the server.];
 
 docargument [CN] [The player to ban] [Client number] [0];
 
-docargument [R] [The reason for this vote] [] [0];
-
 docremark [Temporary ban duration is fixed at 20 minutes.];
 
 
@@ -3323,8 +3341,6 @@ docargument [N] [0: show, 1: hide] [min 0/max 1/default 0];
 docident [kick] [Kicks the specified player from the server.];
 
 docargument [CN] [The player to kick] [Client number] [0];
-
-docargument [R] [The reason for this vote] [] [0];
 
 
 
